# rusty

./: .gitignore  Cargo.toml  README.md  THEMES.md  build.rs  ssh-audit-2026-03-12.md  ssh-review-2026-03-10.md
.cargo/: ar-ucrt.cmd  config.toml  dlltool-ucrt.cmd  gcc-ucrt.cmd  windres-ucrt.cmd
assets/: make_icon.ps1
installer/: Rusty.wxs  RustyBundle.wxs
installer/term/: ayu-light.toml  catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  everforest-dark.toml  everforest-light.toml  github-dark.toml  github-light.toml  gruvbox-dark.toml  gruvbox-light.toml  kanagawa.toml  monokai.toml  nord.toml  one-dark.toml  papercolor-dark.toml  papercolor-light.toml  rose-pine.toml  solarized-dark.toml  solarized-light.toml  tokyo-night.toml
installer/theme/: AuroraSteel.thm  CinderRose.thm  CrimsonDusk.thm  DesertLinen.thm  EmeraldMist.thm  FjordMist.thm  ForestNight.thm  GildedNight.thm  Graphite.thm  JuniperAsh.thm  Light.thm  MonochromeSlate.thm  PaperCrane.thm  SignalFlare.thm  SolarizedLight.thm  TidalBloom.thm  VoltForge.thm
manifests/h/Hexajohnny/Rusty/0.0.5/: Hexajohnny.Rusty.installer.yaml  Hexajohnny.Rusty.locale.en-US.yaml  Hexajohnny.Rusty.yaml
scripts/: README.md  sync_wezterm_themes.ps1
src/: app.rs  async_config.rs  config.rs  crypto.rs  logger.rs  main.rs  model.rs  ssh.rs  terminal_emulator.rs  terminal_themes.rs  tray.rs
src/app/: 00_all.rs  10_impl_core.rs  11_impl_terminal_helpers.rs  12_impl_settings.rs  13_impl_terminal_view.rs  20_tiles.rs  21_impl_file_manager_view.rs  22_impl_downloads_window.rs  30_app_impl.rs  40_free.rs
theme/: Dark.thm  MidnightBlue.thm  OceanBreeze.thm  Sandstone.thm  SolarizedDark.thm
