[package]
name = "rusty"
version = "0.0.8"
authors = ["hexajohnny"]
edition = "2021"
build = "build.rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
eframe = "0.26"
egui_extras = { version = "0.26", features = ["image"] }
egui_tiles = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
russh = { version = "0.57", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.1.1"
tokio = { version = "1", features = ["rt", "time", "net", "io-util", "fs"] }
vt100 = "0.15"
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }
crossbeam-channel = "0.5"
once_cell = "1.19"
rfd = "0.14"
base64 = "0.22"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_UI_WindowsAndMessaging"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
ureq = { version = "2.12", features = ["json"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[build-dependencies]
winres = "0.1"

[patch.crates-io]
vt100 = { path = "vendor/vt100" }
