[package]
name = "rusty"
version = "0.1.7"
authors = ["hexajohnny"]
edition = "2021"
build = "build.rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
arboard = { version = "3.4", default-features = false }
eframe = { version = "=0.26.2", default-features = false, features = ["wgpu", "default_fonts"] }
wgpu = { version = "=0.19.4", default-features = false, features = ["dx12", "wgsl"] }
egui_extras = { version = "=0.26.2", features = ["image"] }
egui_tiles = "=0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
russh = { version = "0.57", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.1.1"
tokio = { version = "1", features = ["rt", "time", "net", "io-util", "fs"] }
wezterm_term = { package = "tattoy-wezterm-term", version = "0.1.0-fork.5" }
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }
crossbeam-channel = "0.5"
once_cell = "1.19"
rfd = "0.14"
base64 = "0.22"
md5 = "0.7"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
ureq = { version = "2.12", features = ["json"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[build-dependencies]
winres = "0.1"
